# ArtGallery

./: .gitignore  ArtGallery.cabal  README.md
Haskell/: README.md
Haskell/src/: ArtGallery.hs
Haskell/src/ArtGallery/Math/Fib/: Naive.hs  ZipWith.hs
Haskell/src/ArtGallery/Sort/PrefixTree/: AlexandersGreen.hs
Haskell/src/ArtGallery/Sort/QuickSort/: Naive.hs  NaiveOneLine.hs
